fixed visiblity bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,7 @@ $n: #475ed6;
 
 @mixin Pname($rORl, $rORl__value) {
   display: block;
+  visibility: hidden;
   position: absolute;
   height: 2rem;
   width: 5rem;
@@ -290,7 +291,7 @@ a {
       height: 2.2rem;
 
       border-radius: 50%;
-      transition: all 0.3s;
+      transition: all 0.8s;
 
       &:hover,
       &:focus,
@@ -300,10 +301,11 @@ a {
     }
 
     a {
+      position: relative;
       border-radius: 50%;
+
       &:nth-of-type(1) {
         background-color: $m;
-        position: relative;
 
         &:before {
           content: "Mercury";
@@ -311,83 +313,84 @@ a {
         }
         &:hover:before {
           opacity: 0.5;
+          visibility: visible;
         }
       }
       &:nth-of-type(2) {
         background-color: $v;
-        position: relative;
         &:before {
           content: "Venus";
           @include Pname(right, 2rem);
         }
         &:hover:before {
           opacity: 0.5;
+          visibility: visible;
         }
       }
       &:nth-of-type(3) {
         background-color: $e;
-        position: relative;
         &:before {
           content: "Earth";
           @include Pname(right, 1.5rem);
         }
         &:hover:before {
           opacity: 0.5;
+          visibility: visible;
         }
       }
       &:nth-of-type(4) {
         background-color: $mars;
-        position: relative;
         &:before {
           content: "Mars";
           @include Pname(right, 1.2rem);
         }
         &:hover:before {
           opacity: 0.5;
+          visibility: visible;
         }
       }
       &:nth-of-type(5) {
         background-color: $j;
-        position: relative;
         &:before {
           content: "Jupiter";
           @include Pname(right, 3rem);
         }
         &:hover:before {
           opacity: 0.5;
+          visibility: visible;
         }
       }
       &:nth-of-type(6) {
         background-color: $s;
-        position: relative;
         &:before {
           content: "Saturn";
           @include Pname(right, 3rem);
         }
         &:hover:before {
           opacity: 0.5;
+          visibility: visible;
         }
       }
       &:nth-of-type(7) {
         background-color: $u;
-        position: relative;
         &:before {
           content: "Uranus";
-          @include Pname(right, 4rem);
+          @include Pname(right, 2rem);
         }
         &:hover:before {
           opacity: 0.5;
+          visibility: visible;
         }
       }
       &:nth-of-type(8) {
         background-color: $n;
-        position: relative;
         &:before {
           content: "Neptune";
           @include Pname(right, 10rem);
         }
         &:hover:before {
           opacity: 0.5;
+          visibility: visible;
         }
       }
     }
